Fix empty collapsed input
fixes #524

--- a/core/src/main/web/app/styles/cell-outputs.scss
+++ b/core/src/main/web/app/styles/cell-outputs.scss
@@ -15,6 +15,10 @@
  */
 
 bk-code-cell-output {
+  .toggle-menu.bkr {
+    top: 15px;
+  }
+
   .ui-state-default {
     background: rgb(235, 235, 235);
   }
