--- a/core/src/main/web/app/styles/cells.scss
+++ b/core/src/main/web/app/styles/cells.scss
@@ -49,7 +49,8 @@ bk-markdown-cell > div {
 }
 
 .bkcell.code-cell-area, .text-cell {
-    padding: 20px;
+    padding:     20px;
+    padding-top: 40px;
     border: solid 1px $cell-border;
 }
 
@@ -77,10 +78,6 @@ bk-code-cell .code-cell-output {
     padding:    0 20px;
     position:   relative;
     border-top: solid 1px #CCC;
-
-    &.input-hidden {
-        margin-top: 35px;
-    }
 }
 
 .advanced-mode bk-code-cell .code-cell-output {
@@ -89,6 +86,10 @@ bk-code-cell .code-cell-output {
     &.no-output .cell-menu-item {
         display: none;
     }
+}
+
+.advanced-mode .bkcell.code-cell-area, .text-cell {
+    padding-top: 20px;
 }
 
 .advanced-mode .output-hidden .cell-menu-item {
